# efficient-auto-research

./: .gitignore  README.md  pyproject.toml
agent/: run.py
agent/engine/: embedder.py  executor.py  graph.py  search.py  thompson.py
agent/llm/: __init__.py
configs/: default.yaml
eval/: mlebench.py
tests/: test_smoke.py
