[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research"
version = "0.1.0"
description = "Efficient Auto-Research via Graph-based Thompson Sampling"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.10.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.0.0",
    "tf-keras>=2.16.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["agent*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
